@@ -2,7 +2,63 @@
  *  Copyright © 2006 Keith Packard <keithp@keithp.com>
  *
  *  SPDX-License-Identifier: GPL-2.0+
+ *
+ * A note on the "child commit emitted before parent exists" error:
+ *
+ * This code is somewhat complex because the natural order of operations
+ * generated by the file-traversal operations in the rest of the code is
+ * not even remotely like the canonical order generated by git-fast-export.
+ * We want to emulate the latter in order to make regression-testing and
+ * comparisons with other tools as easy as possible.
+ *
+ * Until 2020 there used to be support for a fast mode that did what's
+ * natural given the way the analysis engine works - all blobs were
+ * shipped first and then commits, avoiding the necessity to write
+ * tempfiles and then copy blob data around on disk. When this export
+ * code was first written in 2013, fast mode was good for about a 2x
+ * throughput increase.  Fast mode was abandoned because SSDs have since
+ * reduced the cost of that disk shuffle, and having two different output
+ * code paths became more work than it was worth.
+ *
+ * This decision is recorded here because it allows the theoretical
+ * possibility of a CVS collection that cannot be successfully lifted
+ * without the old-fast mode code. Suspect this if you ever get a
+ * "child commit emitted before parent exists" error that can't be
+ * resolved with the -t 0 option.
+ *
+ * The problem is the shuffle done to put the generated gitspace
+ * commits in time order is only correctness-preserving if time order
+ * is never the reverse of topological (parent-child) order; otherwise
+ * a commit could be shipped before its parent.  This can happen
+ * sporadically in multithreaded mode due to a race condition in
+ * accumulating CVS changes with identical timestamps.  One of the
+ * test cases, t9601, exhibits this behavior if -t 0 is not forced.
+ *
+ * No case of order inversion has been observed in the wild with
+ * cliques having *different* timestamps.  Unfortunately, CVS
+ * timestamps are generated client-side, not server side, so
+ * sufficiently bad skew between client-machine clocks could produce
+ * such an inversion.  A hacker on machine A committed a change at time T,
+ * then a hacker on machine B committed a change at time T+n seconds
+ * with the A change as parent, but machine B's clock is skew by more
+ * than -n seconds so the timestamps are in the wrong order and the
+ * parent-child order gets messed up when the generated commits are
+ * time-sorted.
+ *
+ * If this ever happens, it will probably be on a project history from
+ * before the general deployment of NTP in the early 1990s, which
+ * narrowed expected time skew to on the close order of 1 second.
+ * That's not a large time window after the first release of CVS in
+ * 1990, but some CVS projects inherited older and less precise
+ * timestamps from RCS and SCCS - those fossils have been seen in the
+ * wild, notably in the histories of GCC and Emacs.
+ *
+ * If you see this error with -t 0, report it as a bug.  It might mean
+ * we have to bite the bullet and implement a real toposort here, or it 
+ * might just mean some timestamps in your masters need to be patched
+ * by a few seconds.
  */
+
 #define _XOPEN_SOURCE 700
 #define _DEFAULT_SOURCE
 
@@ -31,23 +87,6 @@
 #define fputc   fputc_unlocked
 #define feof    feof_unlocked
 #endif /* __GLIBC__ */
-
-/*
- * Below this byte-volume threshold, default to canonical order.
- * Above it, default to fast.  Note that this is total volume of
- * the CVS masters - it would be better to use total snapshot volume
- * but we don't have that at the time the check is done. This threshold is
- * mainly present for backward compatibility and is somewhat arbitrary.
- */
-#define SMALL_REPOSITORY	1000000
-
-/*
- * This code is somewhat complex because the natural order of operations
- * generated by the file-traversal operations in the rest of the code is
- * not even remotely like the canonical order generated by git-fast-export.
- * We want to emulate the latter in order to make regression-testing and
- * comparisons with other tools as easy as possible.
- */
 
 static serial_t *markmap;
 static serial_t mark;
@@ -143,33 +182,21 @@ static void export_blob(node_t *node,
     }
 
     node->commit->serial = seqno_next();
-    if (opts->reportmode == fast) {
-	markmap[node->commit->serial] = ++mark;
-	printf("blob\nmark :%d\n", (int)mark);
-	fprintf(stdout, "data %lu\n", (unsigned long)(len + extralen));
-	if (extralen > 0)
-	    fwrite(CVS_IGNORES, extralen, sizeof(char), stdout);
-	fwrite(buf, len, sizeof(char), stdout);
-	fputc('\n', stdout);
-    }
-    else
-    {
-	FILE *wfp;
+    FILE *wfp;
 
-	char path[PATH_MAX];
-	blobfile(node->commit->master->name, node->commit->serial, true, path);
-	wfp = fopen(path, "w");
+    char path[PATH_MAX];
+    blobfile(node->commit->master->name, node->commit->serial, true, path);
+    wfp = fopen(path, "w");
 
-	if (wfp == NULL)
-	    fatal_error("blobfile open of %s: %s (%d)", 
-			path, strerror(errno), errno);
-	fprintf(wfp, "data %lu\n", (unsigned long)(len + extralen));
-	if (extralen > 0)
-	    fwrite(CVS_IGNORES, extralen, sizeof(char), wfp);
-	fwrite(buf, len, sizeof(char), wfp);
-	fputc('\n', wfp);
-	(void)fclose(wfp);
-    }
+    if (wfp == NULL)
+	fatal_error("blobfile open of %s: %s (%d)", 
+		    path, strerror(errno), errno);
+    fprintf(wfp, "data %lu\n", (unsigned long)(len + extralen));
+    if (extralen > 0)
+	fwrite(CVS_IGNORES, extralen, sizeof(char), wfp);
+    fwrite(buf, len, sizeof(char), wfp);
+    fputc('\n', wfp);
+    (void)fclose(wfp);
 }
 
 static int unlink_cb(const char *fpath, 
@@ -185,8 +212,7 @@ static int unlink_cb(const char *fpath,
 
 static void cleanup(const export_options_t *opts)
 {
-    if (opts->reportmode == canonical)
-        nftw(blobdir, unlink_cb, 64, FTW_DEPTH | FTW_PHYS);
+    nftw(blobdir, unlink_cb, 64, FTW_DEPTH | FTW_PHYS);
 }
 
 static const char *utc_offset_timestamp(const time_t *timep, const char *tz)
@@ -418,9 +444,8 @@ export_commit(git_commit *commit, const char *branch,
 
     for (op2 = operations; op2 < op; op2++) {
 	if (op2->op == 'M' && !op2->rev->emitted) {
-	    if (opts->reportmode == canonical)
-		markmap[op2->rev->serial] = ++mark;
-	    if (report && opts->reportmode == canonical) {
+	    markmap[op2->rev->serial] = ++mark;
+	    if (report) {
 		char path[PATH_MAX];
 		char *fn = blobfile(op2->path, op2->rev->serial, false, path);
 		FILE *rfp = fopen(fn, "r");
@@ -578,7 +603,7 @@ static int compare_commit(const git_commit *ac, const git_commit *bc)
     /* 
      * Any remaining tiebreakers would be essentially arbitrary,
      * inserted just to have as few cases where the threaded scheduler
-     * is random as posssible.
+     * is random as possible.
      */
     cmp = strcmp(ac->author, bc->author);
     if (cmp != 0)
@@ -711,28 +736,17 @@ void export_commits(forest_t *forest,
 {
     rev_ref *h;
     tag_t *t;
-    git_commit *c;
     git_repo *rl = forest->git;
     generator_t *gp;
     int recount = 0;
-
-    if (opts->reportmode == adaptive) {
-	if (forest->textsize <= SMALL_REPOSITORY)
-	    opts->reportmode = canonical;
-        else
-	    opts->reportmode = fast;
-    }
-
-    if (opts->reportmode == canonical)
-    {
-	char *tmp = getenv("TMPDIR");
-	if (tmp == NULL) 
-	    tmp = "/tmp";
-	seqno = mark = 0;
-	snprintf(blobdir, sizeof(blobdir), "%s/cvs-fast-export-XXXXXX", tmp);
-	if (mkdtemp(blobdir) == NULL)
-	    fatal_error("temp dir creation failed\n");
-    }
+    char *tmp = getenv("TMPDIR");
+	
+    if (tmp == NULL) 
+	tmp = "/tmp";
+    seqno = mark = 0;
+    snprintf(blobdir, sizeof(blobdir), "%s/cvs-fast-export-XXXXXX", tmp);
+    if (mkdtemp(blobdir) == NULL)
+	fatal_error("temp dir creation failed\n");
 
     /* an attempt to optimize output throughput */
     setvbuf(stdout, NULL, _IOFBF, BUFSIZ);
@@ -754,124 +768,65 @@ void export_commits(forest_t *forest,
     }
     progress_end("done");
 
-    if (progress)
-    {
-	static char msgbuf[100];
-	snprintf(msgbuf, sizeof(msgbuf), "Saving in %s order: ",
-		opts->reportmode == fast ? "fast" : "canonical");
-	progress_begin(msgbuf, export_stats.export_total_commits);
-    }
-
     if (opts->reposurgeon)
 	fputs("#reposurgeon sourcetype cvs\n", stdout);
-    if (opts->reportmode == fast) {
-	/*
-	 * Dump by branch order, not by commit date.  Slightly faster
-	 * and less memory-intensive, but it's not git-fast-export
-	 * canonical form and cannot be directly compared to the
-	 * output of other tools.
-	 */
-	git_commit **history;
-	int alloc, i;
-	int n;
 
-	for (h = rl->heads; h; h = h->next) {
-	    if (!h->tail) {
-		// We need to export commits in reverse order; so
-		// first of all, we convert the linked-list given by
-		// h->commit into the array "history".
-		history = NULL;
-		alloc = 0;
-		/* PUNNING: see the big comment in cvs.h */ 
-		for (c=(git_commit *)h->commit, n=0; c; c=(c->tail ? NULL : c->parent), n++) {
-		    if (n >= alloc) {
-			alloc += 1024;
-			history = (git_commit **)xrealloc(history, alloc *sizeof(git_commit *), "export");
-		    }
-		    history[n] = c;
-		}
+    struct commit_seq *history, *hp;
+    bool sortable;
 
-		/*
-		 * Now walk the history array in reverse order and export the
-		 * commits, along with any matching tags.
-		 */
-		for (i=n-1; i>=0; i--) {
-		    git_commit *gc = history[i];
-		    if (opts->fromtime >= gc->date)
-			continue;
-		    if (gc->parent != NULL && display_date(gc->parent, markmap[gc->parent->serial], opts->force_dates) < opts->fromtime)
-			(void)printf("from %s%s^0\n\n",
-				     opts->branch_prefix, h->ref_name);
-		    export_commit(gc, h->ref_name, true, opts);
-		    progress_step();
-		    for (t = all_tags; t; t = t->next)
-			if (t->commit == gc && display_date(gc, markmap[gc->serial], opts->force_dates) > opts->fromtime)
-			    printf("reset refs/tags/%s\nfrom :%d\n\n", t->name, (int)markmap[gc->serial]);
-		}
+    history = canonicalize(rl);
 
-		free(history);
-	    }
+#ifdef ORDERDEBUG2
+    fputs("Export phase 2:\n", stderr);
+    for (hp = history; hp < history + export_stats.export_total_commits; hp++)
+	dump_commit(hp->commit, stderr);
+#endif /* ORDERDEBUG2 */
+
+    /* 
+     * Check that the topo order is consistent with time order.
+     * If so, we can sort commits by date without worrying that
+     * we'll try to ship a mark before it's defined.
+     */
+    sortable = true;
+    for (hp = history; hp < history + export_stats.export_total_commits; hp++) {
+	if (hp->commit->parent && hp->commit->parent->date > hp->commit->date) {
+	    sortable = false;
+	    announce("some parent commits are younger than children.\n");
+	    break;
 	}
     }
-    else 
-    {	
-	struct commit_seq *history, *hp;
-	bool sortable;
-
-	history = canonicalize(rl);
- 
-#ifdef ORDERDEBUG2
-	fputs("Export phase 2:\n", stderr);
-	for (hp = history; hp < history + export_stats.export_total_commits; hp++)
-	    dump_commit(hp->commit, stderr);
-#endif /* ORDERDEBUG2 */
-
-	/* 
-	 * Check that the topo order is consistent with time order.
-	 * If so, we can sort commits by date without worrying that
-	 * we'll try to ship a mark before it's defined.
-	 */
-	sortable = true;
-	for (hp = history; hp < history + export_stats.export_total_commits; hp++) {
-	    if (hp->commit->parent && hp->commit->parent->date > hp->commit->date) {
-		sortable = false;
-		announce("some parent commits are younger than children.\n");
-		break;
-	    }
-	}
-	if (sortable)
-	    qsort((void *)history, 
-		  export_stats.export_total_commits, sizeof(struct commit_seq),
-		  sort_by_date);
+    if (sortable)
+	qsort((void *)history, 
+	      export_stats.export_total_commits, sizeof(struct commit_seq),
+	      sort_by_date);
 
 #ifdef ORDERDEBUG2
-	fputs("Export phase 3:\n", stderr);
+    fputs("Export phase 3:\n", stderr);
 #endif /* ORDERDEBUG2 */
-	for (hp = history; hp < history + export_stats.export_total_commits; hp++) {
-	    bool report = true;
-	    if (opts->fromtime > 0) {
-		if (opts->fromtime >= display_date(hp->commit, mark+1, opts->force_dates)) {
-		    report = false;
-		} else if (!hp->realized) {
-		    struct commit_seq *lp;
-		    if (hp->commit->parent != NULL && display_date(hp->commit->parent, markmap[hp->commit->parent->serial], opts->force_dates) < opts->fromtime)
-			(void)printf("from %s%s^0\n\n", opts->branch_prefix, hp->head->ref_name);
-		    for (lp = hp; lp < history + export_stats.export_total_commits; lp++) {
-			if (lp->head == hp->head) {
-			    lp->realized = true;
-			}
+    for (hp = history; hp < history + export_stats.export_total_commits; hp++) {
+	bool report = true;
+	if (opts->fromtime > 0) {
+	    if (opts->fromtime >= display_date(hp->commit, mark+1, opts->force_dates)) {
+		report = false;
+	    } else if (!hp->realized) {
+		struct commit_seq *lp;
+		if (hp->commit->parent != NULL && display_date(hp->commit->parent, markmap[hp->commit->parent->serial], opts->force_dates) < opts->fromtime)
+		    (void)printf("from %s%s^0\n\n", opts->branch_prefix, hp->head->ref_name);
+		for (lp = hp; lp < history + export_stats.export_total_commits; lp++) {
+		    if (lp->head == hp->head) {
+			lp->realized = true;
 		    }
 		}
 	    }
-	    progress_jump(hp - history);
-	    export_commit(hp->commit, hp->head->ref_name, report, opts);
-	    for (t = all_tags; t; t = t->next)
-		if (t->commit == hp->commit && display_date(hp->commit, markmap[hp->commit->serial], opts->force_dates) > opts->fromtime)
-		    printf("reset refs/tags/%s\nfrom :%d\n\n", t->name, (int)markmap[hp->commit->serial]);
 	}
-
-	free(history);
+	progress_jump(hp - history);
+	export_commit(hp->commit, hp->head->ref_name, report, opts);
+	for (t = all_tags; t; t = t->next)
+	    if (t->commit == hp->commit && display_date(hp->commit, markmap[hp->commit->serial], opts->force_dates) > opts->fromtime)
+		printf("reset refs/tags/%s\nfrom :%d\n\n", t->name, (int)markmap[hp->commit->serial]);
     }
+
+    free(history);
 
     for (h = rl->heads; h; h = h->next) {
 	if (display_date(h->commit, markmap[h->commit->serial], opts->force_dates) > opts->fromtime)
